--- a/cities.html
+++ b/cities.html
@@ -20,7 +20,7 @@
         <h5 id="start">Press any letter to start</h5>
     </div>
     <div class="container mainGame triangle-bottom triangle-top">
-        <h3><p id="attempts">You have 10 guesses left.</p></h3>
+        <h3><p id="attempts">You have 10 chances left.</p></h3>
         <h3><p id="alertMsg"></p></h3>
         <p id="word"></p>
         <h4 id="guessedLetters"></h4>
