added media query for front page.

--- a/index.html
+++ b/index.html
@@ -11,35 +11,34 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Word Guess </title>
 </head>
-<body>
+<body class="mainPage">
     <div class="container mainContainer triangle-top triangle-bottom" >
         <h1 class="mainHeading">Guess The Word!</h1>
     </div>
     <div class="container subContainer">
         <h5 class="subHeading">Choose from the options...</h5>
     </div>
-    <div class="container choices">
+    <div class="choices">
             <div class="row justify-content-around">
-                    <div class="col-4">
-                            <a class="btn btn-lg options" href="languages.html" role="button" value="1">Programming Languages</a>
+                    <div class="col">
+                            <a class="btn btn-lg options" href="languages.html" role="button">Programming Languages</a>
                     </div>
-                    <div class="col-4">
-                            <a class="btn btn-lg options" href="footballTeam.html" role="button" value="2">Football Team</a>
+                    <div class="col">
+                            <a class="btn btn-lg options" href="footballTeam.html" role="button">Football Team</a>
                     </div>
-                    <div class="col-4">
-                            <a class="btn btn-lg options" href="cities.html" role="button" value="3">Cities</a>
+                    <div class="col">
+                            <a class="btn btn-lg options" href="cities.html" role="button">Cities</a>
                     </div>
             </div>
-            <br/>
             <div class="row justify-content-around">
-                    <div class="col-4">
-                            <a class="btn btn-lg options" href="animals.html" role="button" value="4">Zoo Animals</a>
+                    <div class="col">
+                            <a class="btn btn-lg options" href="animals.html" role="button">Zoo Animals</a>
                     </div>
-                    <div class="col-4">
-                            <a class="btn btn-lg options" href="movies.html" role="button" value="5">Movies</a>
+                    <div class="col">
+                            <a class="btn btn-lg options" href="movies.html" role="button">Movies</a>
                     </div>
-                    <div class="col-4">
-                            <a class="btn btn-lg options" href="gameOfThrones.html" role="button" value="6">Game Of Thrones</a>
+                    <div class="col">
+                            <a class="btn btn-lg options" href="gameOfThrones.html" role="button">Game Of Thrones</a>
                     </div>
             </div>
     </div>
