adding changes to reload game

--- a/languages.html
+++ b/languages.html
@@ -12,14 +12,15 @@
     <title>Programming-Language</title>
 </head>
 <body class="programmingLanguage">
-    <div class="container imageContainer">
-            <img src="./assets/images/languages/Prog-languages.png" class="img-fluid" alt="Responsive image">
+    <div class="container">
+    <div class="imageContainer">
+            <img src="./assets/images/languages/Prog-languages.png" class="img-responsive" alt="Responsive image">
     </div>
-    <div class="container heading">
+    <div class="heading">
         <h2>Guess the languages....</h2>
         <h5 id="start">Press any letter to start</h5>
     </div>
-    <div class="container mainGame triangle-bottom triangle-top">
+    <div class=" mainGame triangle-bottom triangle-top">
         <h3><p id="attempts">You have 10 chances left.</p></h3>
         <h3><p id="alertMsg"></p></h3>
         <p id="word"></p>
@@ -28,9 +29,7 @@
                 <div class="col">
                         <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
                 </div>
-                <div class="col">
-                        <a class="btn btn-lg options" href="languages.html" role="button">Restart</a>
-                </div>
+    </div>
     </div>
     <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
 </body>
