added bootstrap css

--- a/gameOfThrones.html
+++ b/gameOfThrones.html
@@ -7,19 +7,21 @@
     <link href="https://fonts.googleapis.com/css?family=Rammetto+One|Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/backgrounds.css">
     <link rel="stylesheet" href="./assets/css/gamePage.css">
     <title>Game Of Thrones</title>
 </head>
 <body class="gameOfThrones">
-    <div class="container imageContainer">
-            <img src="./assets/images/GOT/banner3.jpg" class="img-fluid" alt="Responsive image">
+    <div class="container">
+    <div class="imageContainer">
+            <img src="./assets/images/GOT/banner3.jpg" class="img-responsive" alt="Responsive image">
     </div>
-    <div class="container heading">
+    <div class="heading">
         <h2>Guess the GOT Flag....</h2>
         <h5 id="start">Press any letter to start</h5>
     </div>
-    <div class="container mainGame triangle-bottom triangle-top">
+    <div class="mainGame triangle-bottom triangle-top">
         <h3><p id="attempts">You have 10 chances left.</p></h3>
         <h3><p id="alertMsg"></p></h3>
         <p id="word"></p>
@@ -28,6 +30,8 @@
                 <div class="col">
                         <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
                 </div>
+    </div>
+    </div>
     </div>
     <script type="text/javascript" src="./assets/scripts/javascriptGOT.js"></script>
 </body>
