--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="choices">
             <div class="row justify-content-around">
                     <div class="col">
-                            <a class="btn btn-lg options" id="languageButton"  onclick="window.location='languages.html'" role="button">Programming Languages</a>
+                            <a class="btn btn-lg options" href="languages.html" id="languageButton"  onclick="window.location='languages.html'" role="button">Programming Languages</a>
                     </div>
                     <div class="col">
                             <a class="btn btn-lg options" href="footballTeam.html" role="button">Football Team</a>
