--- a/footballTeam.html
+++ b/footballTeam.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,38 @@
     <link href="https://fonts.googleapis.com/css?family=Rammetto+One|Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/backgrounds.css">
     <link rel="stylesheet" href="./assets/css/gamePage.css">
     <title>Football Team</title>
 </head>
+
 <body class="footballTeam">
-    <div class="container imageContainer">
-            <img src="./assets/images/footballTeam/img.png" class="img-fluid" alt="Responsive image">
-    </div>
-    <div class="container heading">
-        <h2>Guess the Football Teams....</h2>
-        <h5 id="start">Press any letter to start</h5>
-    </div>
-    <div class="container mainGame triangle-bottom triangle-top">
-        <h3><p id="attempts">You have 10 chances left.</p></h3>
-        <h3><p id="alertMsg"></p></h3>
-        <p id="word"></p>
-        <h4 id="guessedLetters"></h4>
-        <div class="row buttons">
+    <div class="container">
+        <div class="imageContainer">
+            <img src="./assets/images/footballTeam/img.png" class="img-responsive" alt="Responsive image">
+        </div>
+        <div class="heading">
+            <h2>Guess the Football Teams....</h2>
+            <h5 id="start">Press any letter to start</h5>
+        </div>
+        <div class="mainGame triangle-bottom triangle-top">
+            <h3>
+                <p id="attempts">You have 10 chances left.</p>
+            </h3>
+            <h3>
+                <p id="alertMsg"></p>
+            </h3>
+            <p id="word"></p>
+            <h4 id="guessedLetters"></h4>
+            <div class="row buttons">
                 <div class="col">
-                        <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
+                    <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
                 </div>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="./assets/scripts/javascriptFootball.js"></script>
 </body>
+
 </html>
