--- a/languages.html
+++ b/languages.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rammetto+One|Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/backgrounds.css">
     <link rel="stylesheet" href="./assets/css/gamePage.css">
     <title>Programming-Language</title>
@@ -29,6 +30,7 @@
                 <div class="col">
                         <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
                 </div>
+    </div>
     </div>
     </div>
     <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
