--- a/movies.html
+++ b/movies.html
@@ -7,19 +7,22 @@
     <link href="https://fonts.googleapis.com/css?family=Rammetto+One|Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/backgrounds.css">
     <link rel="stylesheet" href="./assets/css/gamePage.css">
     <title>Movies</title>
 </head>
 <body class="movies">
-    <div class="container imageContainer">
-            <img src="./assets/images/films/img1.jpg" class="img-fluid" alt="Responsive image">
+        <div class="container">
+
+    <div class="imageContainer">
+            <img src="./assets/images/films/img1.jpg" class="img-responsive" alt="Responsive image">
     </div>
-    <div class="container heading">
+    <div class="heading">
         <h2>Guess the Top Hit Movies....</h2>
         <h5 id="start">Press any letter to start</h5>
     </div>
-    <div class="container mainGame triangle-bottom triangle-top">
+    <div class="mainGame triangle-bottom triangle-top">
         <h3><p id="attempts">You have 10 chances left.</p></h3>
         <h3><p id="alertMsg"></p></h3>
         <p id="word"></p>
