adding div id to use for choices

--- a/animals.html
+++ b/animals.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="animals">
-    <div class="container">
+    <div class="container" id="animals">
         <div class="imageContainer">
             <img src="./assets/images/animals/animal1.jpg" class="img-responsive" alt="Responsive image">
         </div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="./assets/scripts/javascriptAnimals.js"></script>
+        <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
 </body>
 
 </html>
