--- a/footballTeam.html
+++ b/footballTeam.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="footballTeam">
-    <div class="container">
+    <div class="container" id="football">
         <div class="imageContainer">
             <img src="./assets/images/footballTeam/img.png" class="img-responsive" alt="Responsive image">
         </div>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="./assets/scripts/javascriptFootball.js"></script>
+    <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
 </body>
 
 </html>
