--- a/gameOfThrones.html
+++ b/gameOfThrones.html
@@ -13,7 +13,7 @@
     <title>Game Of Thrones</title>
 </head>
 <body class="gameOfThrones">
-    <div class="container">
+    <div class="container" id="gameOfThrones">
     <div class="imageContainer">
             <img src="./assets/images/GOT/banner3.jpg" class="img-responsive" alt="Responsive image">
     </div>
@@ -33,6 +33,6 @@
     </div>
     </div>
     </div>
-    <script type="text/javascript" src="./assets/scripts/javascriptGOT.js"></script>
+    <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
 </body>
 </html>
