--- a/cities.html
+++ b/cities.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="cities">
-    <div class="container">
+    <div class="container" id="cities">
         <div class="imageContainer">
             <img src="./assets/images/cities/colormap.GIF" class="img-responsive" alt="Responsive image">
         </div>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="./assets/scripts/javascriptCities.js"></script>
+    <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
 </body>
 
 </html>
