--- a/movies.html
+++ b/movies.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,26 +13,32 @@
     <link rel="stylesheet" href="./assets/css/gamePage.css">
     <title>Movies</title>
 </head>
-<body class="movies">
-        <div class="container">
 
-    <div class="imageContainer">
+<body class="movies">
+    <div class="container" id="movies">
+
+        <div class="imageContainer">
             <img src="./assets/images/films/img1.jpg" class="img-responsive" alt="Responsive image">
-    </div>
-    <div class="heading">
-        <h2>Guess the Top Hit Movies....</h2>
-        <h5 id="start">Press any letter to start</h5>
-    </div>
-    <div class="mainGame triangle-bottom triangle-top">
-        <h3><p id="attempts">You have 10 chances left.</p></h3>
-        <h3><p id="alertMsg"></p></h3>
-        <p id="word"></p>
-        <h4 id="guessedLetters"></h4>
-        <div class="row buttons">
+        </div>
+        <div class="heading">
+            <h2>Guess the Top Hit Movies....</h2>
+            <h5 id="start">Press any letter to start</h5>
+        </div>
+        <div class="mainGame triangle-bottom triangle-top">
+            <h3>
+                <p id="attempts">You have 10 chances left.</p>
+            </h3>
+            <h3>
+                <p id="alertMsg"></p>
+            </h3>
+            <p id="word"></p>
+            <h4 id="guessedLetters"></h4>
+            <div class="row buttons">
                 <div class="col">
-                        <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
+                    <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
                 </div>
-    </div>
-    <script type="text/javascript" src="./assets/scripts/javascriptCities.js"></script>
+            </div>
+            <script type="text/javascript" src="./assets/scripts/javascript.js"></script>
 </body>
+
 </html>
