made few logic changes

--- a/movies.html
+++ b/movies.html
@@ -33,6 +33,8 @@
             </h3>
             <p id="word"></p>
             <h4 id="guessedLetters"></h4>
+            <h4 id="wins"></h4>
+            <h4 id="losses"></h4>
             <div class="row buttons">
                 <div class="col">
                     <a class="btn btn-lg options" href="index.html" role="button">Main Menu</a>
